tests/paczka1/fuzzy1/68609327.err
Error in line 3: A270 A270 56,8
Error in line 10: yl5L S558 46,1
Error in line 14: A270 S489 106,5
Error in line 19: 94uWLNOr A270 65,1
Error in line 24: 0TbcG5 S992 23,7
Error in line 33: yl5L S489 40,0
Error in line 37: 94uWLNOr S992 79,4
